第一天项目

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mint-ui": "^2.2.13"
+    "mint-ui": "^2.2.13",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
